- добавлен профиль "dev" - добавлено создание пользователей при старте приложения с профилем "dev" - добавлена ошибка UserNotFoundException, которая выбрасывает если пользователь не найден - добавлен обработчик ошибок для UserNotFoundException с перенаправлением на view с деталями ошибки - для ускорения поска бинов добавлена @Repository - убрана cascade=CascadeType.ALL в ролях пользователя, фикс удаление ролей при удалении пользователя - изменен тип поля ролей с List на Set - добавлены методы toString всем сущностям, и equals&hashCode для Role - перенесена сущность Compete в пакет entity - исправлен формат даты в html и в entity - исправлено использование lombok - удалены повторяющиеся адреса в securityConfig - изменены типы возвращаемых сущностей при поиске из в бд на Optional<Entity.class> - прочий рефакторинг и исправления